@@ -53,16 +53,8 @@ java {
     targetCompatibility = JavaVersion.toVersion("23")
 }
 
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--enable-preview")
-}
-
-tasks.withType<Test>().configureEach {
-    jvmArgs("--enable-preview")
-}
-
 tasks.withType<JavaExec>().configureEach {
-    jvmArgs("--enable-preview", "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED")
+    jvmArgs( "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED")
 }
 
 application {
